--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Getting Data from Backend to Frontend</title>
-    <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
 
-<div id="feed"></div>
+<div id="feed">
+    <h1>Results</h1>
+</div>
 
-<script src="src/app.js"></script>
+<script src="src/app.js"></script>  <!-- the frontend source code -->
 </body>
 </html>
